syntax = "proto3";

package api.protobuf;

option go_package = "github.com/stonecutter/blog-microservices/api/protobuf";

import 'user.proto';
import 'post.proto';
import 'google/protobuf/timestamp.proto';
import "validate/validate.proto";

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse) {}
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse) {}
  rpc GetCommentListByPostID(GetCommentListByPostIDRequest) returns (GetCommentListByPostIDResponse) {}
}

message RequestComment {
  uint64 id = 1;
  string content = 2 [(validate.rules).string = {min_len: 1, max_len: 140}];
  uint64  post_id = 3;
}

message ResponseComment {
  uint64 id = 1;
  string content = 2 [(validate.rules).string = {min_len: 1, max_len: 140}];
  uint64 post_id = 3;
  uint64 user_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  User user = 7;
  ResponsePost post = 8;
}

message CreateCommentRequest {
  RequestComment comment = 1;
}

message CreateCommentResponse {
  ResponseComment comment = 1;
}

message UpdateCommentRequest {
  RequestComment comment = 1;
}

message UpdateCommentResponse {
  bool success = 1;
}

message DeleteCommentRequest {
  uint64 id = 1;
}

message DeleteCommentResponse {
  bool success = 1;
}

message GetCommentListByPostIDRequest {
  uint64 post_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetCommentListByPostIDResponse {
  repeated ResponseComment comments = 1;
  uint64 total = 2;
}
