syntax = "proto3";

package api.protobuf;

option go_package = "github.com/stonecutter/blog-microservices/api/protobuf";

import "google/protobuf/timestamp.proto";

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {}
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {}
}

message Post {
  uint64 id = 1;
  string title = 2;
  string content = 3;
  uint64 user_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetPostRequest {
  uint64 id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  bool success = 1;
}

message DeletePostRequest {
  uint64 id = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message ListPostsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 count = 2;
}